# SJLab_APE_paper

./: .buildinfo  .gitignore  LICENSE  README.md  environment.yml  example.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
APE_paper_photometry_code_francesca/: requirements.txt  set_global_params.py
_sources/: index.rst.txt
auto_examples/: figure_1_ijk.html  figure_2_bcde.html  index.html  plot_figure_1_c.html  sg_execution_times.html
data/: 6OHDA_image-data.csv  Muscimol-injections_dataframe.csv  Optoinhibition-after-learning_dataframe.csv  README.md  TS20_20230512_RTC_restructured_data.pkl  figure_1f_data_raw.xlsx
graphs_excel_format/: figure_1c_data.xlsx  figure_1c_data_labels.xlsx  figure_1e_data.xlsx  figure_1e_data_labels.xlsx  figure_1f_data.xlsx  figure_1h_data.xlsx  figure_1ij_data.xlsx  figure_1ij_data_labels.xlsx  figure_1l_data.xlsx  figure_1mn_data.xlsx  figure_1mn_data_labels.xlsx  figure_4d-4mW_data.xlsx  figure_4d-4mW_data_labels.xlsx  figure_4f-4mW_data.xlsx  figure_4f-4mW_data_labels.xlsx  figure_5f_data_labels.xlsx  figure_5g_data_labels.xlsx  figure_ED10e.xlsx  figure_ED10e.xlsx:Zone.Identifier  figure_ED10fgh_4mW.xlsx  figure_ED10fgh_4mW.xlsx:Zone.Identifier  figure_ED10fgh_8mW.xlsx  figure_ED10fgh_8mW.xlsx:Zone.Identifier  figure_ED10i_4mW.xlsx  figure_ED10i_4mW.xlsx:Zone.Identifier  figure_ED10i_8mW.xlsx  figure_ED10i_8mW.xlsx:Zone.Identifier  figure_ED2d_data.xlsx  figure_ED2e_data_labels.xlsx  figure_ED2f_data_labels.xlsx  (+8 more)
(+193 files in other folders)
